# dephell

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  README.rst  install.py  markdonlint.json  markdownlint.json  mypy.ini  pyproject.toml  requirements-flake.txt  requirements.txt  setup.cfg  setup.py  tmp.py  tmp.sh  tox.ini
.github/: issue_template.md
dephell/: __init__.py  __main__.py  __version__.py  archive.py  cache.py  cached_property.py  cached_property.pyi  cacher.py  choice.py  cli.py  config.py  constants.py  context_tools.py  core.py  dependency.py  discover.py  exceptions.py  imports.py  logging_helpers.py  networking.py  package.py  package_manager.py  pip_cleaner.py  pythons.py  release.py  resolver.py  rules.py  shells.py  utils.py  venv.py  venvs.py  yaml.py
dephell/actions/: __init__.py  _autocomplete.py  _changelog.py  _contributing.py  _converting.py  _docker.py  _dotenv.py  _downloads.py  _editorconfig.py  _entrypoints.py  _get_python.py  _git.py  _install.py  _json.py  _package.py  _python.py  _roman.py  _shutil.py  _transform.py  _travis.py  _venv.py  _version.py
dephell/commands/: __init__.py  auth.py  autocomplete.py  base.py  build.py  config.py  convert.py  create.py  deps_add.py  deps_audit.py  deps_check.py  deps_convert.py  deps_install.py  deps_licenses.py  deps_outdated.py  deps_sync.py  deps_tree.py  destroy.py  discover.py  docker_create.py  docker_destroy.py  docker_prepare.py  docker_remove.py  docker_run.py  docker_shell.py  docker_stop.py  docker_tags.py  generate_authors.py  generate_config.py  generate_contributing.py  generate_editorconfig.py  generate_license.py  generate_travis.py  get.py  helpers.py  info.py  init.py  inspect_auth.py  inspect_config.py  inspect_gadget.py  (+41 more)
dephell/config/: __init__.py  app_dirs.py  builders.py  defaults.py  logging_config.py  manager.py  parser.py  scheme.py
dephell/controllers/: __init__.py  _conflict.py  _dependency.py  _docker.py  _graph.py  _mutator.py  _readme.py  _repos.py  _resolver.py  _safety.py  _snyk.py  _uploader.py  conflict.py  dependency.py  graph.py  mutator.py  readme.py  resolver.py  safety.py  snyk.py
dephell/converters/: __init__.py  base.py  conda.py  dist.py  egginfo.py  flit.py  imports.py  installed.py  pip.py  pipfile.py  pipfilelock.py  poetry.py  poetrylock.py  pyproject.py  sdist.py  setuppy.py  wheel.py
dephell/links/: __init__.py  path.py  unknown.py  url.py  vcs.py
dephell/markers/: __init__.py  and_marker.py  base.py  constants.py  markers.py  operation.py  or_marker.py  string.py  version.py
dephell/models/: __init__.py  auth.py  author.py  constraint.py  dependency.py  entrypoint.py  extra_dependency.py  git_release.py  git_specifier.py  group.py  groups.py  links.py  marker.py  marker_tracker.py  range_specifier.py  release.py  requirement.py  root.py  simple_dependency.py  specifier.py
dephell/repositories/: __init__.py  _getter.py  _local.py  _local_single.py  _release.py  base.py  conda.py  directory.py  file.py  github.py  local.py  parsers.py  release.py  warehouse.py
dephell/templates/: autocomplete-zsh.sh.j2  autocomplete.sh.j2  conflict.html.j2  contributing.md.j2  docker_prepare.sh  python.html.j2  state.html.j2
dephell2/: cache.py  dependency.py  node.py  release.py  resolver.py  root.py  utils.py
dephell2/repositories/: __init__.py  warehouse.py
dephell3/: __main__.py  cli.py  console.py  constructors.py  core.py  exporters.py
dephell3/controllers/: graph.py  mutator.py  resolver.py
dephell3/converters/: __init__.py  pip.py
dephell3/models/: __init__.py  constraint.py  dependency.py  group.py  release.py  root.py
dephell3/repositories/: warehouse.py
docs/: Makefile  README.md  badge.md  changelog.md  cmd-auth.md  cmd-autocomplete.md  cmd-build.md  cmd-deps-add.md  cmd-deps-audit.md  cmd-deps-check.md  cmd-deps-convert.md  cmd-deps-install.md  cmd-deps-licenses.md  cmd-deps-outdated.md  cmd-deps-sync.md  cmd-deps-tree.md  cmd-docker-create.md  cmd-docker-destroy.md  cmd-docker-prepare.md  cmd-docker-run.md  cmd-docker-shell.md  cmd-docker-stop.md  cmd-docker-tags.md  cmd-generate-authors.md  cmd-generate-config.md  cmd-generate-contributing.md  cmd-generate-editorconfig.md  cmd-generate-license.md  cmd-generate-travis.md  cmd-inspect-auth.md  cmd-inspect-config.md  cmd-inspect-project.md  cmd-inspect-self.md  cmd-inspect-venv.md  cmd-inspect-versioning.md  cmd-install.md  cmd-jail-install.md  cmd-jail-list.md  cmd-jail-remove.md  cmd-jail-show.md  (+59 more)
docs/source/: command-build.md  conf.py  index.rst
proper-dist/: dephell-0.3.0-py3-none-any.whl
tests/: conftest.py  factories.py  helpers.py  test_archive.py  test_cli.py  test_commands_init.py  test_config.py  test_converters.py  test_converters_pip.py  test_converters_pipfile.py  test_converters_pipfilelock.py  test_dependency.py  test_docs.py  test_factories.py  test_git_resolving.py  test_helpers.py  test_links_parsing.py  test_links_vcs.py  test_merging.py  test_models_specifier.py  test_mutator.py  test_package.py  test_pythons.py  test_repositories_git_git.py  test_resolver.py  test_smoke.py  test_utils.py
tests/fixtures/: warehouse-api-package.json  warehouse-api-release.json  warehouse-simple.html
tests/repository/: dephell_discover-0.2.5-py3-none-any.whl  dephell_pythons-0.1.11-py3-none-any.whl
tests/requirements/: 2.txt  attrs-requests.txt  dephell.toml  django-django.txt  django.txt  flit.toml  module.py  oslo.txt  pipfile.toml  poetry.lock.toml  poetry.toml  scipy-pandas-numpy.txt  setup.py  wheel.whl
tests/requirements/egg-info/: PKG-INFO  README.md  README.rst  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt  setup.cfg  setup.py
tests/requirements/egg-info/dephell/: __init__.py  __main__.py  cache.py  cli.py  constants.py  rules.py  utils.py
tests/test_actions/: test_changelog.py  test_dotenv.py  test_entrypoints.py  test_json.py  test_roman.py  test_transform.py  test_travis.py  test_version.py
tests/test_commands/: test_build.py  test_deps_add.py  test_deps_audit.py  (+28 more)
(+75 files in other folders)
