
# Default section.
# Convert dephell metainfo and dependencies from poetry to setup.py:
# $ dephell deps convert
[tool.dephell.main]
# read from poetry format
from = {format = "poetry", path = "pyproject.toml"}
# and convert into setup.py
to = {format = "setuppy", path = "setup.py"}

# explicitly specify your versioning scheme to let your users know what they can expect
versioning = "semver"

# Make lockfile
# $ dephell deps convert --env=lock
[tool.dephell.lock]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "poetrylock", path = "poetry.lock"}

# Install flake8 with plugin in the separated venv and run it:
# $ dephell venv create --env=flake8
# $ dephell deps install --env=flake8
# $ dephell venv run --env=flake8
[tool.dephell.flake8]
# read requirements file
from = {format = "pip", path = "requirements-flake.txt"}
# run this command
command = "flake8"

[tool.dephell.typing]
from = {format = "poetry", path = "pyproject.toml"}
# mypy isn't specified in dependencies,
# but `dephell venv run` command will install it automatically
command = "mypy --ignore-missing-imports --allow-redefinition dephell"

# Test project package in the separated venv:
# $ dephell project test --env=pytest
[tool.dephell.pytest]
# read dependencies from poetry format
from = {format = "poetry", path = "pyproject.toml"}
# install dependencies from `dependencies` section and `tests` extra
envs = ['main', 'tests']
# copy files that requred for tests
tests = ["tests", "README.md"]
# run command `pytest`
command = "pytest tests/"

[tool.dephell.pypy]
from = {format = "poetry", path = "pyproject.toml"}
# force python interpreter for env
python = "pypy3"
command = "pytest -x tests/"

# Install `docs` extra dependencies  in the separated venv and run sphinx:
# $ dephell venv create --env=docs
# $ dephell deps install --env=docs
# $ dephell venv run --env=docs
[tool.dephell.docs]
# read dependencies from poetry format
from = {format = "poetry", path = "pyproject.toml"}
# install only `docs` extra dependencies
envs = ["docs"]
# run this command:
command = "sphinx-build -M html docs docs/build"

# -- ISORT -- #

[tool.isort]
skip = "tests/requirements"
line_length = 120
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
not_skip = "__init__.py"
multi_line_output = 5

import_heading_stdlib = "built-in"
import_heading_thirdparty = "external"
import_heading_firstparty = "project"
import_heading_localfolder = "app"

# -- POETRY -- #

[tool.poetry]
name = "dephell"
version = "0.7.3"
authors = ["Gram <master_fess@mail.ru>"]
description = "Dependency resolution for Python"
readme = "README.md"
license = "MIT"
repository = "https://github.com/dephell/dephell"
documentation = "https://dephell.readthedocs.io/en/latest/"
keywords = [
    "dephell", "packaging", "dependency", "dependencies", "venv", "licenses",
    "pip", "poetry", "pipfile", "pipenv", "setuptools",
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Setuptools Plugin",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Security",  # because we lock dependencies with hashes :)
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
dephell = "dephell.cli:entrypoint"

[tool.poetry.dependencies]
python = ">=3.5"
aiohttp = "*"
appdirs = "*"
attrs = "*"
cerberus = ">=1.3"
html5lib = "*"
jinja2 = "*"
m2r = "*"
packaging = "*"
pip = ">=18.0"
pyyaml = "*"  # TODO: replace by ruamel.yaml when migrate from poetry format to flit
requests = "*"
setuptools = "*"
tomlkit = "*"
yaspin = "*"

# optional
aiofiles = {optional = true}
autopep8 = {optional = true}
colorama = {optional = true}
graphviz = {optional = true}
yapf = {optional = true}

# dephell ecosystem
dephell-archive   = ">=0.1.5"
dephell-discover  = ">=0.2.4"
dephell-licenses  = ">=0.1.6"
dephell-links     = ">=0.1.4"
dephell-markers   = ">=0.2.6"
dephell-pythons   = ">=0.1.11"
dephell-shells    = ">=0.1.3"
dephell-specifier = ">=0.1.7"
dephell-venvs     = ">=0.1.16"

[tool.poetry.dev-dependencies]
pytest = "*"
requests-mock = "*"
aioresponses = "*"

sphinx = "*"
recommonmark = "*"
sphinx-rtd-theme = "*"
pygments-github-lexers = "*"

[tool.poetry.extras]
full = ["aiofiles", "autopep8", "colorama", "graphviz", "yapf"]
tests = ["pytest", "requests-mock", "aioresponses"]
docs = ["sphinx", "recommonmark", "sphinx-rtd-theme", "pygments-github-lexers"]
