[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length=110
ignore=E241,C401,C408,VNE003
exclude=
    .tox
    .dephell
    .pytest_cache
    build
    setup.py

[tool:pytest]
addopts = --strict-markers
markers =
    allow_hosts: allow network requests to specified hostnames.
