[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 120
max-complexity = 12
select = C,E,F,W,B,B9

[isort]
line_length = 120
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
not_skip = __init__.py
multi_line_output = 5
import_heading_stdlib = built-in
import_heading_thirdparty = external
import_heading_firstparty = project
import_heading_localfolder = app

[egg_info]
tag_build = 
tag_date = 0

